# echoprint-codegen

./: .gitignore  CMakeLists.txt
src/: Aubio.h  AudioStreamInput.cxx  AudioStreamInput.h  Codegen.cxx  Fingerprint.cxx  Fingerprint.h  Makefile  SubbandAnalysis.cxx  SubbandAnalysis.h  functions.cxx  main.cxx
